Fix orbit controls on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -87,18 +87,6 @@ canvas {
   color: #FFFFFF;
 }
 
-.callouts-bottom:after {
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 0;
-  left: 800px;
-  bottom: -146px;
-  border: 73px solid transparent;
-  border-top: 74px solid black;
-  z-index: 3;
-}
-
 .callouts-bottom p {
   font-size: 5rem;
 }
@@ -120,9 +108,8 @@ canvas {
 
 
 .loader {
-  background: #3a0601;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
 }
 
 .loader img {
@@ -132,8 +119,8 @@ canvas {
 
 .loader-content {
   display: grid;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   align-items: center;
   justify-content: center;
   text-align: center;
